# heygrats-local-sync-app

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
scripts/: set-version.mjs
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
