[package]
name = "heygrats-local-sync-desktop"
version = "0.1.0"
description = "HeyGrats local sync desktop app"
authors = ["HeyGrats"]
license = ""
repository = "https://github.com/xorica27/heygrats-local-sync-app"
edition = "2021"
rust-version = "1.78.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
notify = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
